--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:id="@+id/editor_root"
-    app:layoutDescription="@xml/activity_editor_scene">
-
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/button_sidebar_slide"
         android:layout_width="88dp"
         android:layout_height="65dp"
-        android:layout_marginTop="1dp"
         android:background="@drawable/border_sidetab_btns"
         android:elevation="3dp"
-        app:layout_constraintBottom_toTopOf="@+id/linear_sidetab"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
@@ -26,11 +19,11 @@
         android:id="@+id/linear_sidetab"
         android:layout_width="88dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:elevation="3dp"
         app:layout_constraintBottom_toTopOf="@+id/tablayout_editor_btmctrl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_sidebar_slide"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/button_sidebar_slide">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_sidebar_category"
@@ -55,7 +48,6 @@
             android:paddingTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_sidebar_category" />
 
@@ -69,8 +61,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:tabMode="scrollable">
+        app:tabBackground="@android:color/transparent"
+        app:tabIndicatorHeight="0dp"
 
+        app:tabMode="fixed">
 
     </com.google.android.material.tabs.TabLayout>
 
@@ -91,6 +85,4 @@
             android:layout_height="match_parent"
             android:orientation="vertical" />
     </ScrollView>
-
-
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
